--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,33 +1,37 @@
 $color: rgb(255, 255, 255);
 
-.menu {
+nav {
     overflow: hidden;
     background-color:  black;
-  }
 
-  .menu a {
-    float: left;
-    color:$color;
-    text-align: center;
-    padding: 20px 20px;
-    text-decoration: none;
-    font-size: 20px;
-  }
-  
-  .menu a:hover {
-    background-color: rgb(196, 196, 192);
-    color: black;
-  }
-
-  .logo{
-    font-weight: bolder;
-    background-color: rgb(86, 150, 247);
-  }
-
-  .username{
-    float: right;
-    color: $color;
-    padding-right: 2%;
-    font-size: 20px;
-    
+    a {
+      float: left;
+      color:$color;
+      text-align: center;
+      padding: 20px 20px;
+      text-decoration: none;
+      font-size: 20px;
     }
+
+    a:hover {
+      background-color: rgb(196, 196, 192);
+      color: black;
+    }
+
+    p{
+      float: right;
+      color: $color;
+      padding-right: 2%;
+      font-size: 20px;
+      
+      }
+      
+      .logo{
+        font-weight: bolder;
+        background-color: rgb(86, 150, 247);
+      }
+  }
+
+  
+
+  
