--- a/src/app/todotitle/todotitle.component.scss
+++ b/src/app/todotitle/todotitle.component.scss
@@ -1,7 +1,7 @@
 $color1: rgb(86, 150, 247);
 $color2: rgb(255, 255, 255);
 
-#inputTitleText {
+input {
     display: inline-block;
     margin: 0 0 10px 0;
     padding: 5px;
@@ -12,7 +12,7 @@ $color2: rgb(255, 255, 255);
     font-size: 18px;
 }
 
-#addListBtn{
+button{
        
     background: $color1;
     color: $color2;
