--- a/src/app/todojson/todojson.component.html
+++ b/src/app/todojson/todojson.component.html
@@ -17,7 +17,7 @@
             <div class="removejson" (click)="removeTitle($event)">x</div>{{jdata.title}}
             <input type="text" id="taskText" class="taskin">
             <button id="addTaskBtn" (click)="addTask($event)">+</button><br>
-            <ul><li *ngFor="let task of jdata.list"  id={{task.id}}>{{task.title}}<span class="removejtask" id="remove" (click)="removeTask($event)">x</span></li></ul>
+            <ul><li *ngFor="let task of jdata.list"  id={{task.id}} (click)="strike($event)">{{task.title}}<span class="removejtask" id="remove" (click)="removeTask($event)">x</span></li></ul>
             <!-- <br> -->
             <span>Author:</span>{{jdata.author}}<br>
             <span>Date:</span>{{jdata.date}}
