--- a/src/app/todojson/todojson.component.scss
+++ b/src/app/todojson/todojson.component.scss
@@ -33,7 +33,12 @@ $color: rgb(255, 255, 255);
                         cursor: pointer;
                         
                     }
+                    
                     }
+
+                    li.checked { 
+                        text-decoration: line-through;
+                      }
             }
         }
 
