--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -4,5 +4,5 @@
   <a href="#users">Users</a>
   <a href="#tasks">Tasks</a>
   <a href="#about">About</a>
-  <p class=username>Username: <span id="uname"></span></p>
+  <p class=username>Username: Byte Me</p>
 </nav>
